[gd_scene load_steps=2 format=3 uid="uid://loading_spinner_001"]

[ext_resource type="Script" path="res://features/ui/components/loading_spinner.gd" id="1"]

[node name="LoadingSpinner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SpinnerContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Spinner" type="TextureRect" parent="VBoxContainer/SpinnerContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1
